src/internal/vm/snapshots/hebi__internal__vm__tests__simple_class_derived.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
class T: pass
class U(T): pass
U


# Result:
Object(
    ClassType {
        name: "U",
        init: None,
        fields: {},
        methods: {},
        parent: Some(
            ClassType {
                name: "T",
                init: None,
                fields: {},
                methods: {},
                parent: None,
            },
        ),
    },
)
