src/internal/vm/snapshots/hebi__internal__vm__tests__table_equality.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
print {} == {}
print {x: 3} == {x: 3}
print {x: 3} != {x: none}
print {x: 3} != {y: 3}
print {x: 3} != {}
print {x: 3} != {x: 3, y: 4}
print {x: [1, 2]} == {x: [1, 2]}
print {x: [1, 2]} != {x: [2, 3]}


# Result:
None

# Output:
true
true
true
true
true
true
true
true

